--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
+    "jest": "^29.7.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
