--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,12 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "outDir": "./dist",
+    "declaration": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -11,7 +14,6 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
